# chisel

./: .eslintrc.js  .gitignore  README.md  config-overrides.js  package.json
gouge/: Cargo.toml
gouge/src/: lib.rs
public/: index.html  manifest.json
src/: App.tsx  Controls.tsx  ImageDataCanvas.tsx  ImageWorker.ts  carveSeam.ts  detectEdges.ts  energyToImageData.ts  imageProcessing.ts  index.tsx  loadImage.ts  loadImageData.ts  rs.worker.ts  useImageDropHandler.ts  useImagePasteDropHandler.ts  useImageWorker.ts  useRustLibrary.ts  useTransformedImage.ts  useViewportSize.ts  worker.d.ts
src/gouge/: Cargo.toml
src/gouge/src/: lib.rs
src/rs/: Cargo.toml
src/rs/src/: bindings.rs  lib.rs
