[package]
name = "gouge"
version = "0.1.0"
authors = ["Adam Richardson"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.69"

[dependencies.web-sys]
version = "^0.3.4"
features = [
  'ImageData'
]

[profile.dev]
lto = true
opt-level = 3
wasm-opt = false

[profile.release]
lto = true
opt-level = 3
wasm-opt = false