[package]
name = "chisel"
version = "0.1.0"
authors = ["Adam Richardson"]
edition = "2018"
description = "Seam carving in the browser with WebAssembly"
repository = "git@github.com:as3richa/chisel.git"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.69"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false